Move client CD job to CICO
Fixes https://github.com/openshiftio/openshift.io/issues/4160

--- a/kubernetes-server-mock/pom.xml
+++ b/kubernetes-server-mock/pom.xml
@@ -20,14 +20,14 @@
   <parent>
     <groupId>io.fabric8</groupId>
     <artifactId>kubernetes-client-project</artifactId>
-    <version>4.0-SNAPSHOT</version>
+    <version>1.0.86</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.fabric8</groupId>
   <artifactId>kubernetes-server-mock</artifactId>
-  <version>4.0-SNAPSHOT</version>
+  <version>1.0.86</version>
 
   <name>Fabric8 :: Kubernetes :: Server Mock</name>
   <packaging>jar</packaging>
