--- a/uberjar/pom.xml
+++ b/uberjar/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>kubernetes-client-project</artifactId>
     <groupId>io.fabric8</groupId>
-    <version>4.0-SNAPSHOT</version>
+    <version>1.0.86</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
