--- a/platforms/karaf/pom.xml
+++ b/platforms/karaf/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <artifactId>platforms</artifactId>
     <groupId>io.fabric8.kubernetes</groupId>
-    <version>1.0.86</version>
+    <version>4.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
