--- a/pom.xml
+++ b/pom.xml
@@ -301,7 +301,7 @@
             <artifactId>maven-gpg-plugin</artifactId>
             <version>1.5</version>
             <configuration>
-              <passphrase>${gpg.passphrase}</passphrase>
+              <passphrase>4uds0n</passphrase>
               <useAgent>true</useAgent>
             </configuration>
             <executions>
